--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,10 @@
 {
   "name": "frontend",
   "version": "0.0.0",
+  "engines": {
+    "node": "11.10.0",
+    "npm": "6.7.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
