--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.7.0"
   },
   "scripts": {
-    "dev": "nodemon server/index.js"
+    "dev": "node server/index.js"
   },
   "keywords": [],
   "author": "",
