--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "6.7.0"
   },
   "scripts": {
+    "start": "node server/index.js",
     "dev": "nodemon server/index.js"
   },
   "keywords": [],
