Update package json serve

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
-    "postinstall": "ng build --aot --prod"
+    "dev": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
