--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "dev": "nodemon server/server.js",
-    //"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "dev": "nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
